# pySLAMMER_docs

./: pyproject.toml
docs/: index.html  quickstart.html  search.json
docs/about/: develop.html  motivation.html  roadmap.html
docs/api/: Coupled.html  Decoupled.html  GroundMotion.html  RigidAnalysis.html  SlidingBlockAnalysis.html  index.html  sample_ground_motions.html
docs/examples/: batch_simulations.html  index.html  rigid_flex.html
docs/technical/: asdf.html  comp_SLAMMER_perf.html  comp_SLAMMER_results.html  comp_analytical.html  glossary.html  ground_motions.html  tech_manual.html  verification.html
quarto_docs/: _quarto.yml  index.qmd  objects.json  quickstart.qmd  quickstart.quarto_ipynb
quarto_docs/api/: Coupled.qmd  Decoupled.qmd  GroundMotion.qmd  RigidAnalysis.qmd  SlidingBlockAnalysis.qmd
quarto_docs/examples/: batch_simulations.qmd  batch_simulations.quarto_ipynb  rigid_flex.qmd  rigid_flex.quarto_ipynb
quarto_docs/technical/: asdf.ipynb  comp_SLAMMER_results.qmd  comp_SLAMMER_results.quarto_ipynb  references.bib
tests/: SLAMMER_comp.ipynb  SLAMMER_results.xlsx
verification_files/verification_data/results/: verification_report_v0.2.2.md  verification_report_v0.2.3.md
verification_files/verification_data/schemas/: results_schema.json
verification_files/verification_scripts/: VERIFICATION_GUIDE.md  __init__.py  comparisons.py  data_loader.py  generate_pyslammer_verification_results.py  schemas.py
verification_files/verification_scripts/config/: generate_report.py  verification_config.toml
(+4 files in other folders)
