[project]
name = "pyslammer-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyslammer>=0.2.1",
    "ipykernel>=6.29.5",
    "ipympl>=0.9.7",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.1",
    "numpy==2.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "scipy",
]
