[project]
name = "pyslammer-docs"
version = "0.1.0"
description = "Documentation for pySLAMMER"
authors = [
    {name = "Lorne Arnold", email = "arnoldl@uw.edu"},
]
dependencies = [
    "quartodoc>=0.7.0",
    "pyyaml>=6.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "pyslammer @ git+https://github.com/pySLAMMER/pySLAMMER.git@uv-setup",
    "pynewmarkdisp>=0.1.0",
    "great-tables>=0.18.0",
]
requires-python = ">=3.11"

[tool.hatch.metadata]
allow-direct-references = true
